<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thial.estudandokotlin.ActivityAddDisciplina">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/mTxtInputDisciplina"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/mEdtNomeDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_disciplina"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mTxtInputNota1"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtInputDisciplina"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/mEdtNota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota1"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mTxtInputNota2"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtInputNota1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/mEdtNota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota2"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mTxtInputNota3"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTxtInputNota2">

        <EditText
            android:id="@+id/mEdtNota3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota3"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:imeOptions="actionDone"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/mBtnDeleteDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="40dp"
        android:text="@string/apagar_discip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/mBtnSalvarDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="40dp"
        android:text="@string/salvar_discip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
